{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerGaming",
            "id": "3a2e3429-4548-4f48-8d1b-5df917fb004b",
            "actions": [
                {
                    "name": "MouseHold",
                    "type": "Button",
                    "id": "d24e7c1c-2791-4f5a-ba8d-763315db8353",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3,pressPoint=0.5),Press",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseUp",
                    "type": "Button",
                    "id": "acdb073d-9b89-475f-ade1-3f490bc99742",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.25,behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDown",
                    "type": "Button",
                    "id": "c8079be3-fd58-45af-91c2-eb0caf9f92ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "MainMouse1",
                    "type": "Button",
                    "id": "5bd9d05e-e573-4032-aa50-1f55343ce052",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3,pressPoint=0.5),MultiTap(tapTime=0.2,tapDelay=0.4,pressPoint=0.3)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca4b942b-8c93-4d64-8f80-ed08fb0eab21",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4337f876-cc2e-4e1c-bd9c-9eeeb09ccaaa",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e2ebcf1-b442-4865-be40-e6211135d7df",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24aaac07-2c06-4e2e-9324-f462efb9d36d",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8573dc56-88d0-4151-9a23-de775645d7ca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3e733ac-8f5d-4116-8ed3-03190208216f",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68799017-05db-41a7-abf8-ee363099461d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8476214f-3773-4184-adef-c506718702fa",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}